2013-11-26

	* src/headerview.c: headerview_show_xface(): make sure xface is nul
	  terminated.
	* src/rfc2015.c: rfc2015_msg_is_encrypted(): fixed fp resource leak.
	  (unused function)
	* src/jpilot.c: jpilot_read_db_files(): fixed memory leaks.

2013-11-25

	* src/main.c: win32: check for the TaskbarCreated message and reshow
	  icon when explorer.exe crashes.

2013-10-30

	* src/vcard.c
	  src/rpop3.c
	  src/folderview.c: fixed logical bugs (#134).
	  This fixes a bug that 'File - Folder - Move folder...' menu didn't
	  work.

2013-10-29

	* version 3.4.0beta6

2013-10-29

	* config.guess: updated to 2013-06-10 version (#117).
	* config.sub: updated to 2013-10-01 version (#117).

2013-10-23

	* src/stock_pixmap.c: stock_pixbuf_widget_for_toolbar():
	  check if icon for stock id exist (fixes empty toolbar icons).

2013-10-04

	* src/compose.c
	  src/prefs_toolbar.c
	  src/stock_pixmap.[ch]
	  src/mainwindow.c: made the rest of toolbar icons themeable.

2013-09-20

	* makewin32.sh: added --with-themedir configure option.

2013-09-17

	* src/stock_pixmap.c: fixed filename (book.png -> stock_book.png).

2013-09-17

	* src/main.c
	  src/Makefile.am
	  src/stock_pixmap.[ch]
	  configure.in: implemented icon theme feature (some icons on toolbars
	  are not themed yet).

2013-09-17

	* src/textview.c: modified debug output.

2013-09-13

	* libsylph/procheader.c
	  libsylph/procmsg.h
	  libsylph/procmime.[ch]
	  src/icons/html.png
	  src/icons/Makefile.am
	  src/stock_pixmap.[ch]
	  src/summaryview.c: distinguish icon for HTML mail and other mail
	  with attachments on summaryview (#84) (Thanks to Hayashi).

2013-09-11

	* src/quick_search.[ch]
	  libsylph/folder.c: added 'Last 30 days' to the quick search menu.

2013-09-10

	* src/imageview.[ch]
	  src/textview.c: rotate attached images based on Exif orientation tag.

2013-08-28

	* version 3.4.0beta5

2013-08-28

	* configure.in
	  po/eu.po: added Basque translation.

2013-08-26
